feat(menus): icons on native menu items, at the right size
Native menu items CAN carry icons, contrary to what the previous commit
assumed. java.awt.MenuItem has no icon API, but its macOS peer does:
sun.lwawt.macosx.CMenuItem declares public setImage(Image), and the JDK's own
comment says the intended access is an instanceof on the peer, "because we want
to support the NSMenuItem image apis".

The peer is reached through sun.awt.AWTAccessor$MenuComponentAccessor,
resolving the method on the PUBLIC interface rather than the accessor's
implementation class. The implementation is an anonymous class in java.awt, so
going through it needs --add-opens java.desktop/java.awt, which this app does
not set; through the interface the sun.awt and sun.lwawt.macosx opens it
already has on macOS are enough. Verified both ways.

Peers exist as soon as invoker.add(popup) realises the menu, and setImage works
before show(), so icons are applied during assembly rather than onto a menu
that is already tracking.

Sizing was a real bug rather than a tuning value. CImage.createFromImage
branches on MultiResolutionImage: given one, the base variant's dimensions
become the NSImage's POINT size; given a plain bitmap it uses raw PIXEL
dimensions as the point size. Rasterising at the display density therefore
produced a 32pt icon on Retina and a correct one on a 1x screen. The bitmap is
now a fixed 2x of the point size, wrapped in a BaseMultiResolutionImage whose
base variant states 16pt. 16 is grounded, not picked: the system menu-item
checkmark is 14x13pt and 16pt is the common convention for custom menu icons.
Two tests pin the 2x contract and hold the point size in 14..18.

Known limit: macOS offers no way to mark a peer-supplied image as a template,
which is what would let it tint per appearance and while highlighted. Icons are
drawn at a fixed mid-grey near the system secondary label colour, legible on
both light and dark menu backgrounds but not inverted on highlight.

All best-effort: 